extends Control

func _on_mm_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/main_menu.tscn")

func _on_level_1_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_1.tscn")


func _on_level_2_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_2.tscn")


func _on_level_3_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_3.tscn")

func _on_level_4_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_4.tscn")

func _on_level_5_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_5.tscn")

func _on_level_6_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_6.tscn")

func _on_level_7_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_7.tscn")

func _on_level_8_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_8.tscn")

func _on_level_9_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_9.tscn")

func _on_level_10_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_10.tscn")

func _on_level_11_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_11.tscn")

func _on_level_12_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_12.tscn")
